--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
