--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@next/font": "13.1.2",
@@ -19,6 +20,7 @@
     "react-leaflet": "^4.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.30.0",
     "tailwindcss": "^3.2.4"
   }
 }
