--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "migrate:dev": "npx dotenv -e .env.local -- prisma migrate dev",
+    "db:push": "npx dotenv -e .env.local -- prisma db push",
+    "migrate:reset": "npx dotenv -e .env.local -- prisma migrate reset",
+    "db:seed": "npx dotenv -e .env.local -- prisma db seed",
+    "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
+    "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
+    "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@prisma/client": "^4.10.1",
+    "axios": "^1.3.3",
     "leaflet": "^1.9.3",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "lottie-react": "^2.3.1",
@@ -21,6 +30,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.30.0",
+    "dotenv-cli": "^7.0.0",
+    "prisma": "^4.10.1",
     "tailwindcss": "^3.2.4"
   }
 }
