fixed env for db

--- a/.env.local
+++ b/.env.local
@@ -4,4 +4,15 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:SSnmItPS9lvK72GvkIXI@containers-us-west-177.railway.app:7818/railway"
+DATABASE_URL="postgresql://postgres:UjcFzS1hkxkG0snQByz5@containers-us-west-177.railway.app:7818/railway"
+
+PGDATABASE="railway"
+
+PGHOST="containers-us-west-177.railway.app"
+
+PGPASSWORD="UjcFzS1hkxkG0snQByz5"
+
+PGPORT="7818"
+
+PGUSER="postgres"
+
